--- a/package.json
+++ b/package.json
@@ -4,26 +4,13 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^5.28.14",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.6.0",
-    "workbox-broadcast-update": "^6.6.0",
-    "workbox-cacheable-response": "^6.6.0",
-    "workbox-core": "^6.6.0",
-    "workbox-expiration": "^6.6.0",
-    "workbox-google-analytics": "^6.6.1",
-    "workbox-navigation-preload": "^6.6.0",
     "workbox-precaching": "^6.6.0",
-    "workbox-range-requests": "^6.6.0",
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0"
+    "workbox-core": "^6.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.28.11",
     "workbox-webpack-plugin": "^7.0.0"
   }
 }
